# serve-load-testing

./: .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  pre-commit.yaml  publish.yaml
argocd/: application.yaml
manifests/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
manifests/base/: deployment.yaml  ingress.yaml  kustomization.yaml  postgres-deployment.yaml  pvc.yaml  secret.yaml  service.yaml
manifests/built/: deployment.yaml  ingress.yaml  postgres-deployment.yaml  secret.yaml  service.yaml
manifests/overlays/development/: kustomization.yaml  patch.yaml
manifests/overlays/production/: patch.yaml
manifests/overlays/staging/: deployment.yaml
source/: .env.template  .pre-commit-config.yaml  Dockerfile  locust-ui.conf  locust.conf  requirements.txt  run_test_plan.sh  start-script.sh
source/tests/: api.py  base_user_types.py  simple.py  test_plan_classroom.py  test_plan_normal.py  test_verify_host.py  test_verify_setup.py  website.py
source/tests-dev/: appcreator.py  appviewer.py  appviewer_requestshtml.py  authenticated.py  register_user_account.py
