# This file contains project information.
# It also contains settings for linters and code checkers isort, black and mypy.
# Note that these settings are not respected with pre-commit run --all-files
# In that case add configurations to the .pre-commit-config.yaml file.

[project]
name = "serve-load-testing"
version = "1.1.0"
description = "Load testing of the SciLifeLab Serve platform."
requires-python = "=3.12"
keywords = ["load testing", "locust", "python"]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | migrations
)/
'''

[tool.mypy]
strict = false
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
exclude = ["venv", ".venv", "examples"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
	"flatten_json.*",
	"guardian.*",
	"tagulous.*",
	"dash.*",
	"markdown.*",
	"pytz.*",
	"requests.*",
	"setuptools.*",
	"yaml.*",
	]
ignore_missing_imports = true
